@@ -35,6 +35,7 @@ Enrico Scholz
 Martin Rozee
 Pawel Widera
 Gazsó Attila
+Adam Goode <adam@spicenitz.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
